--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "openai": "^3.3.0"
+    "langchain": "0.0.112",
+    "openai": "^3.3.0",
+    "pdf-parse": "^1.1.1"
   }
 }
